; ModuleID = '/home/carl/AnghaBench/wrk/src/extr_script.c_script_request.c'
source_filename = "/home/carl/AnghaBench/wrk/src/extr_script.c_script_request.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [8 x i8] c"request\00", align 1
@.str.1 = private unnamed_addr constant [4 x i8] c"wrk\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @script_request(i32* %0, i8** %1, i64* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i8**, align 8
  %6 = alloca i64*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i8*, align 8
  store i32* %0, i32** %4, align 8
  store i8** %1, i8*** %5, align 8
  store i64* %2, i64** %6, align 8
  store i32 1, i32* %7, align 4
  %9 = load i32*, i32** %4, align 8
  %10 = call i32 @lua_getglobal(i32* %9, i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str, i64 0, i64 0))
  %11 = load i32*, i32** %4, align 8
  %12 = call i32 @lua_isfunction(i32* %11, i32 -1)
  %13 = icmp ne i32 %12, 0
  br i1 %13, label %21, label %14

14:                                               ; preds = %3
  %15 = load i32*, i32** %4, align 8
  %16 = call i32 @lua_getglobal(i32* %15, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.1, i64 0, i64 0))
  %17 = load i32*, i32** %4, align 8
  %18 = call i32 @lua_getfield(i32* %17, i32 -1, i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str, i64 0, i64 0))
  %19 = load i32, i32* %7, align 4
  %20 = add nsw i32 %19, 2
  store i32 %20, i32* %7, align 4
  br label %21

21:                                               ; preds = %14, %3
  %22 = load i32*, i32** %4, align 8
  %23 = call i32 @lua_call(i32* %22, i32 0, i32 1)
  %24 = load i32*, i32** %4, align 8
  %25 = load i64*, i64** %6, align 8
  %26 = call i8* @lua_tolstring(i32* %24, i32 -1, i64* %25)
  store i8* %26, i8** %8, align 8
  %27 = load i8**, i8*** %5, align 8
  %28 = load i8*, i8** %27, align 8
  %29 = load i64*, i64** %6, align 8
  %30 = load i64, i64* %29, align 8
  %31 = call i8* @realloc(i8* %28, i64 %30)
  %32 = load i8**, i8*** %5, align 8
  store i8* %31, i8** %32, align 8
  %33 = load i8**, i8*** %5, align 8
  %34 = load i8*, i8** %33, align 8
  %35 = load i8*, i8** %8, align 8
  %36 = load i64*, i64** %6, align 8
  %37 = load i64, i64* %36, align 8
  %38 = call i32 @memcpy(i8* %34, i8* %35, i64 %37)
  %39 = load i32*, i32** %4, align 8
  %40 = load i32, i32* %7, align 4
  %41 = call i32 @lua_pop(i32* %39, i32 %40)
  ret void
}

declare dso_local i32 @lua_getglobal(i32*, i8*) #1

declare dso_local i32 @lua_isfunction(i32*, i32) #1

declare dso_local i32 @lua_getfield(i32*, i32, i8*) #1

declare dso_local i32 @lua_call(i32*, i32, i32) #1

declare dso_local i8* @lua_tolstring(i32*, i32, i64*) #1

declare dso_local i8* @realloc(i8*, i64) #1

declare dso_local i32 @memcpy(i8*, i8*, i64) #1

declare dso_local i32 @lua_pop(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
